add player move

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
          </div>
 
 
-        <div class="act">
-            <div class="actions">
-                <button>
+        <div class="act" data-id="act">
+            <div class="actions" data-id="actions">
+                <button data-id="action-button">
                      actions &nbsp <i class="fa-solid fa-caret-down"></i>
                 </button>
             </div >
-            <div class="actionlist hidden"  id="hiddenlist">
-                <button >reset</button>
-                <button >new round</button>
+            <div class="actionlist hidden"  data-id="action-list">
+                <button data-id="reset">reset</button>
+                <button data-id="new-round">new round</button>
              </div>
         </div>
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
+        <div id="1" data-id="box" class="xoro"></div>
+        <div id="2" data-id="box" class="xoro"></div>
+        <div id="3" data-id="box" class="xoro"></div>
 
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
+        <div id="4" data-id="box" class="xoro"></div>
+        <div id="5" data-id="box" class="xoro"></div>
+        <div id="6" data-id="box" class="xoro"></div>
 
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
-        <div class="xoro">hi</div>
+        <div id="7" data-id="box" class="xoro"></div>
+        <div id="8" data-id="box" class="xoro"></div>
+        <div id="9" data-id="box" class="xoro"></div>
 
-        <div class="bottom">hi</div>
-        <div class="bottom">hi</div>
-        <div class="bottom">hi</div>
+        <div  class="bottom">hi</div>
+        <div  class="bottom">hi</div>
+        <div  class="bottom">hi</div>
       </div>
     </main>
 
