now the players can take moves

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <main>
       <div class="grid">
-        <div class="topleft">
-            <div>X &nbsp</div>
-           <p>player 1 has to play</p>
+        <div class="topleft" data-id="topleft">
+            <div class="topleftdiv"><i class="fa-solid fa-x clearbackground" ></i> &nbsp</div>
+           <p class="topleftp">player 1 has to play</p>
          </div>
 
 
